[project]
name = "subsonic-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Subsonic music libraries enabling AI-powered playlist generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Emby to M3U Project"}
]
keywords = ["mcp", "subsonic", "music", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.5.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/troykelly/emby-to-m3u"
Repository = "https://github.com/troykelly/emby-to-m3u"
Issues = "https://github.com/troykelly/emby-to-m3u/issues"

[project.scripts]
subsonic-mcp = "subsonic_mcp.server:main"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pylint]
max-line-length = 100
disable = ["C0111"]  # Missing docstrings (we'll add them progressively)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=subsonic_mcp --cov-report=html --cov-report=term-missing"
